fixed spacing and font in search results

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -103,6 +103,11 @@ h3 {
     font-weight: bold;
 }
 
+p,
+a {
+    font-family: 'Urbanist', serif;
+}
+
 body,
 html {
     overflow-x: hidden;
